--- a/技术梯队.md
+++ b/技术梯队.md
@@ -3,7 +3,7 @@ react(redux-auth-wrapper,ant-design/material-ui,draft-js)
 
 后端框架: 
 connect(waterline,helmet,GraphQL,Swagger,jwt,neon)
-strapi/Vulcan
+strapi/Vulcan(graphql)
 iron
 
 开发语言: 
@@ -23,7 +23,7 @@ electron,puppeteer/nightmare
 docker,redis,cayley,openresty
 
 ## 最容易(学习成本低,封装程度高,社区活跃,文档丰富,开发周期短,从0开始做全栈)
-react+strapi/Vulcan+mongodb
+react+strapi/Vulcan(graphql)+mongodb
 ## 最灵活(社区活跃,生态完善)
 react+connect+tidb/mongodb
 ## 高性能
